www/ifdb.css
/* ... */
@media (min-width: 100ch) {
    .twocol {
        display: flex;
    }
    .twocol > div {
        flex-basis: 50%;
    }
    table.halfcol tr td {
        border-left: 1em solid transparent;
    }
    table.halfcol tr td.firstcol {
        border-left: none;
    }

}

.hidden{
    display: none !important;
}

.menu-toggle-button{
    display: none;
    align-items: center;
    align-self: start;
    padding: 0.25em 0.75em 0.25em 0.75em;
    border: none;
    background: none;
    cursor: pointer;
}

.menu-toggle-button:hover{
    text-decoration: underline;
    background-color: #dcdcdc;
}

.readMore {
    max-height: 40vh;
    max-width: 60ch;
    overflow-y: hidden;
    transition: all 0.3s ease;
    position: relative;
}

.readMore .expand {
    display: none;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    text-align: center;
    background-image: linear-gradient(to bottom, rgba(255,255,255,0), white);
    padding: 5em 0 1em;
}

.readMore .expand button {
    font-size: 1em;
}

@media (max-width: 75ch) {

    .mobile-hidden.mobile-hidden {
        display: none;
    }

    #topbar-home {
        display: none;
    }

    #main-nav-wrapper{
        padding: 0;
    }

    .mobile-menu #mobile-menu-toggle-button{
        display: flex;
    }

    .mobile-menu ul{
        display: block;
        position: absolute;
        top: calc(55px + 2.5em);
        right: 0;
        background-color: #e8e8e8;
        z-index: 1;
    }

    .mobile-menu ul a{
        width: 100%;
    }

}

@media (min-width: 75ch) {
    .mobile-only {
        display: none;
    }
}

/*
The "rightbar" table style is used for the little information
boxes at the right of the home page and some other pages.
*/
table.rightbar {
    border-top: thin solid #e8e8FF;
    background: #F8F8FF;
    width: 30ex;
    padding: 0 0 0 0;
    margin: 0 0 1em 1.5ex;
}

table.rightbar tr {
    padding: 0 0 0 0;
}

table.rightbar tr td {
    padding: 2px 4px 4px 4px;
    font-size: 85%;
}

.aside-box {
    border-top: thin solid #e8e8FF;
    background: #F8F8FF;
    margin-bottom: 1em;
    font-size: 0.85em;
    padding: 2px 4px 4px 4px;
}

.aside-box h3 {
    margin-top: 0px;
    padding: 0px 4px 4px 0px;
}

.aside-box p {
    margin: 0px;
}

.aside-box ul {
    padding-left: 3ch;
    margin: 0;
}

.cpanel {
    border: none;
    padding: 0px;
}

#top-reviewers-widget li{
    list-style: none;
}

#top-reviewers-widget ol {
    margin: 0.5em 0em 0.5em 0em;
    padding: 0px;
}

table.botbar2 {
    border-top: thin solid #e8e8ff;
    background: #f8f8ff;
    padding: 0 1em 1ex 1em;
    margin: 1em 0 0 1.5ex;
    font-size: 90%;
    height: 100%;
}
table.botbar2a {
    margin-left: 0;
}
table.botbar2 tr {
    vertical-align: top;
}
table.botbar2 td {
    vertical-align: top;
}

/*
Control panel buttons
*/
div.cpanelBtn {
    font-size: 85%;
    border-top: 1px dotted #8080ff;
    margin: 0;
    padding: 0 0 0 0.75ex;
    cursor: pointer;
}
div.cpanelBtnTop {
    margin: 0;
    border-top: none;
}
.cpanelBtn:hover {
    background: #90ffff;
}
.cpanel a {
    text-decoration: none;
}
.cpanel a:hover {
    text-decoration: underline;
}
img.cpanelBtnIcon {
    margin-right: 1em;
}
div.cpanelHeading {
    margin: 0;
    background: #E8E8FF;
    font-weight: bold;
    font-size: 90%;
    text-align: center;
}
div.cpanelHeadingTop {
}


/*
The "boxhead" style is used for the headline within "rightbar"
boxes.
*/
tr.boxhead {
    margin: 0 0 0 0;
    padding: 0 0 0 0;
}
tr.boxhead td {
    text-align: left;
}

/*
The "dots" is used for horizontal rules that separate sections
on a page.
*/
hr.dots {
    border: thin dotted #d0d0d0;
}

/*
The "grid" table class is used for tables showing images along the
right and associated text alongside to the right.
*/
table.grid tr td {
    vertical-align: top;
    padding-right: 1em;
}

/*
Doublespaced lists - this shows extra vertical spacing between each
element of the list.
*/
ul.doublespace li {
    margin-top: 1em;
    margin-bottom: 1em;
}

/*
News items
*/
div.newsItemHeadline {
    font-weight: bold;
}
div.newsItemDateline {
    font-size: 85%;
    margin: .25ex 0 .75ex 0;
}
div.newsItemHeadline a {
    text-decoration: none;
}
div.newsItemHeadline a:hover {
    text-decoration: underline;
}
div.newsItemBody {
    margin: 0 0 1em 0;
}
div.newsItemFooter {
    font-size: 85%;
    margin: 1ex 0 1em 0;
}
span.newsItemDate {
    padding-left: 2em;
    font-weight: normal;
    font-style: italic;
    font-size: 85%;
}

/*
Tag ages 1 through 7 - these depict the age of a tag using font weight
and color intensity.  We use darker color and heavier [bolder] type for
newer tags, lighter color [more washed out, closer to white] and lighter
type for older tags.  Age 1 is newest, 7 is oldest.
*/
span.tagAge1 {
    color: #000090;
    font-weight: 700;
}
span.tagAge2 {
    color: #0000B0;
    font-weight: 600;
}
span.tagAge3 {
    color: #0000D0;
}
span.tagAge4 {
    color: #2020FF;
}
span.tagAge5 {
    color: #4040FF;
}
span.tagAge6 {
    color: #6060FF;
}
span.tagAge7 {
    color: #8080FF;
}

/*
Popup menus
*/
div.popupMenu {
    border: 1px solid #E0E0FF;
    background: #F8F8F8;
    padding: 0 0 0 0;
}
div.popupMenu table {
    font-size: 100%;
}
div.popupMenu a {
    text-decoration: none;
    padding: 0 6px 0 6px;
    margin: 0 0 0 0;
    width: 100%;
}
div.popupMenu a:hover {
    background: #E0E0FF;
}

/*
The "ratingHistogram" table style is used to draw the histogram showing
how game ratings are distributed.  Within each table row, a "ratingHistoBox"
division contains the overall space for a single bar, and a nested
"ratingHistoBar" division is the colored bar itself.
*/
table.ratingHistogram tr td {
    font-size: 70%;
    line-height: 1em;
    padding-right: 5px;
}
div.ratingHistoBox {
    width: 8ex;
    background: #e0e0ff;
    height: 1em;
    border-top: 1px solid white;
}
div.ratingHistoBar {
    background: #2020ff;
    height: 1em;
}
/* ... */

